--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,10 @@ uuid = "a8c22491-25c4-425e-8460-9022200acfd9"
 authors = ["Johannes Feist"]
 version = "0.1.0"
 
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+
 [compat]
 julia = "1.3"
 
